# qt5_cmake_qml_plugin_example

./: CMakeLists.txt  ReadMe.en.md  ReadMe.md  ReadMe.zh-CN.md  main.cpp  main.qml
UIKit/: CMakeLists.txt  UIKit.qmltypes  UIKitPlugin.cpp  UIKitPlugin.h  qml.qrc  qmldir
UIKit/buttons/: TextButton.qml  qmldir
UIKit/src/: UIKitTheme.cpp  UIKitTheme.h
